# school

./: .gitignore  db.sqlite3  pyproject.toml
core/: admin.py  models.py
core/migrations/: 0001_initial.py
school/: settings.py
